[project]
name = "radar-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cartopy>=0.24.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyproj>=3.7.1",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]
